# al2dbml

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
al2dbml/: __init__.py  __main__.py  __meta__.py  aldoc.py  diagram.py  generator.py  grouping.py  properties.py  relations.py  symbols.py  types.py  validate.py
al2dbml/_build/: __init__.py  context.py  enums.py  extensions.py  filters.py  groups.py  references.py  tables.py
tests/: test_aldoc.py  test_cli.py  test_diagram.py  test_generator.py  test_grouping.py  test_properties.py  test_relations.py  test_symbols.py  test_types.py  test_validate.py
tests/fixtures/: sample_symbols.py
tests/fixtures/aldoc_sample/reference/sample/Table/: Legacy-Table.yml  Sample.Test-Table.yml
tests/fixtures/aldoc_sample/reference/sample/TableExtension/: Sample.Test-Extension.yml
